# cjrv

./: .gitignore  README.md  flagged.json  pyproject.toml
src/: __main__.py  chatgpt_response.json  filter.py  marked.py  responses.py  settings.py  views.py
src/cjrv/: __init__.py  chatgpt_response.json  filter.py  marked.py  responses.css  responses.py  schemas.py  views.py  widgets.py
